--- a/to-do-node/package.json
+++ b/to-do-node/package.json
@@ -10,6 +10,7 @@
   "author": "Juaj Xavier",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.9.0"
